<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F79C5D"
    tools:context=".ui.IntroActivity">


    <ImageView
        android:id="@+id/ivIllus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/illus_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/intro_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIllus"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/tvIntroSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/intro_slogan"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIntro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_primary_200_rounded_5"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="8dp"
        android:fontFamily="@font/regular"
        android:paddingHorizontal="16dp"
        android:text="@string/lanjut"
        android:textAllCaps="false"
        android:textColor="@color/primary_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>