<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_gradient_overlay"
                app:layout_constraintBottom_toBottomOf="@id/ivPoster"
                app:layout_constraintEnd_toEndOf="@id/ivPoster"
                app:layout_constraintStart_toStartOf="@id/ivPoster"
                app:layout_constraintTop_toTopOf="@id/ivPoster" />

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="2dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/bold"
                android:text="@string/detail"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/content"
                layout="@layout/layout_card_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="-60dp"
                app:layout_constraintTop_toBottomOf="@id/ivPoster" />

            <TextView
                android:id="@+id/tvTitleSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/bold"
                android:text="@string/synopsis"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/content" />

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSynopsis"
                tools:text="@tools:sample/lorem" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/bg_primary_200_rounded_5"
                android:backgroundTint="@null"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="8dp"
                android:fontFamily="@font/regular"
                android:paddingHorizontal="16dp"
                android:text="@string/favorite"
                android:textAllCaps="false"
                android:textColor="@color/primary_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSynopsis" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/bg_primary_200_rounded_5"
                android:backgroundTint="@null"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="8dp"
                android:fontFamily="@font/regular"
                android:paddingHorizontal="16dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/primary_500"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSynopsis" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/note"
                android:textColorHint="@color/primary_500"
                android:visibility="gone"
                app:boxBackgroundColor="@color/primary_200"
                app:layout_constraintTop_toBottomOf="@id/btnAdd">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>